--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,17 @@
-﻿
+﻿<top-menu [userinfo]="users[0]" (ondrawerclick)="ondrawerclick($event)"></top-menu>
+<mat-sidenav-container>
+    <mat-sidenav #sidenav mode="side" [(opened)]="shouldRun" class="mat-elevation-z4">            
+        <nav class="main_sidenav">
+            <h3>Admin</h3>   
+        <ul>
+               <li> <a >Side Nav</a> </li>
+        </ul>
+        </nav>
+        </mat-sidenav>
+      <mat-sidenav-content >
 
- <router-outlet  ></router-outlet>
+                <router-outlet ></router-outlet>
 
+    </mat-sidenav-content>
+</mat-sidenav-container>
+     
