Foundation ready project with routing/auth/component communication

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
                     <div>
                         Users from secure api end point:
                         <ul>
-                            <li *ngFor="let user of users">{{user.firstName}} {{user.lastName}}</li>
+                            <li *ngFor="let user of userService.users">{{user.firstName}} {{user.lastName}}</li>
                         </ul>
                     </div>
                     <p><a [routerLink]="['/login']">Logout</a></p>
