--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,10 @@
 
+
+.mainViewBox{   
+    max-width: 70%;
+    margin:0 auto;
+    border: 1px solid rgba(0, 0, 0, 0.03);
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.24), 0 0 2px rgba(0, 0, 0, 0.12)}
 .main_sidenav h3{
     border: none;
     font-size: 10px;
