--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,17 @@
-﻿<top-menu [userinfo]="users[0]" (ondrawerclick)="ondrawerclick($event)"></top-menu>
+﻿<top-menu  (ondrawerclick)="ondrawerclick($event)"></top-menu>
 <mat-sidenav-container>
-    <mat-sidenav #sidenav mode="side" [(opened)]="shouldRun" class="mat-elevation-z4">            
+    <mat-sidenav *ngIf="user.users" #sidenav mode="side" [(opened)]="shouldRun" class="mat-elevation-z4">            
         <nav class="main_sidenav">
             <h3>Admin</h3>   
         <ul>
-               <li> <a >Side Nav</a> </li>
+               <li [routerLinkActive]="['active']" > <a [routerLink]="['/members']">Members</a> </li>
         </ul>
         </nav>
         </mat-sidenav>
       <mat-sidenav-content >
-
+<div class="mainViewBox">
                 <router-outlet ></router-outlet>
-
+</div>
     </mat-sidenav-content>
 </mat-sidenav-container>
      
