--- a/src/app/top-menu/top-menu.component.css
+++ b/src/app/top-menu/top-menu.component.css
@@ -15,6 +15,6 @@
 :host >>> .mat-select-placeholder, 
 :host >>> .mat-select-value,
 :host >>> .mat-select-arrow
- {color:white}
+ {color:white;font-weight: 300;font-size:1em}
 
 :host >>> .drawerShadow{box-shadow: 0 0 10px 1px rgba(0,0,0,.2)!important;background: transparent}
