--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -1,16 +1,16 @@
 <mat-toolbar color="primary" class="topMenu">
  
-    <button mat-mini-fab color="primary"class="drawerShadow" *ngIf="userinfo" (click)="drawerClick()">
-        <i class="fa" [ngClass]="{'fa-times': isclicked, 'fa-bars': !isclicked}"></i>
+    <button mat-mini-fab color="primary"class="drawerShadow" *ngIf="userService.users" (click)="drawerClick()">
+        <i class="fa" [ngClass]="{'fa-arrow-left': isclicked, 'fa-bars': !isclicked}"></i>
     </button>
   <img src="../../assets/images/logo.png" class="topMenuLogo" alt="Vemy logo">
 
        
   
 <span  class="topMenu_rightText" >         
-<mat-select *ngIf=userinfo [placeholder]="userinfo?.firstName +' '+ userinfo?.lastName" >
-            <mat-option selected value="userinfo?.firstName +' '+ userinfo?.lastName">
-                {{ userinfo?.firstName}} {{ userinfo?.lastName}}
+<mat-select *ngIf=userService.users [placeholder]="userService.users[0]?.firstName +' '+ userService.users[0]?.lastName" >
+            <mat-option selected value="userService.users[0]?.firstName +' '+ userService.users[0]?.lastName">
+                {{ userService.users[0]?.firstName}} {{ userService.users[0]?.lastName}}
             </mat-option>
             <mat-option value="logout"><a [routerLink]="['/login']">Logout</a></mat-option>
           </mat-select>
