--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,14 @@
 ﻿
+             
  
-<div class="col-md-6 col-md-offset-3">
-        {{greetMessage}}
+<div>        
     <mat-card id="loginCard">
             <mat-card-title>Login</mat-card-title>
                 
         <img mat-card-image src="../assets/images/login.jpg" >
              
         <mat-card-title-group >
-                     <mat-card-subtitle> Username: test
-                        <br>
-                         Password: test</mat-card-subtitle>
-                 </mat-card-title-group>
+                        </mat-card-title-group>
                 <mat-card-content>
                        
                         <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate class="loginForm">
