--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar color="primary" class="topMenu">
  
-    <button mat-mini-fab color="primary"class="drawerShadow" *ngIf="userService.users" (click)="drawerClick()">
+    <button mat-mini-fab color="primary" class="drawerShadow" *ngIf="userService.users" (click)="drawerClick()">
         <i class="fa" [ngClass]="{'fa-arrow-left': isclicked, 'fa-bars': !isclicked}"></i>
     </button>
-  <img src="../../assets/images/logo.png" class="topMenuLogo" alt="Vemy logo">
+  <img src="../../assets/images/logo.svg" class="topMenuLogo" alt="Vemy logo">
 
        
   
