--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-﻿<top-menu  (ondrawerclick)="ondrawerclick($event)"></top-menu>
+﻿
+<top-menu   [isclicked]="isclicked" (ondrawerclick)="ondrawerclick($event)"></top-menu>
 <mat-sidenav-container>
-    <mat-sidenav *ngIf="user.users" #sidenav mode="side" [(opened)]="shouldRun" class="mat-elevation-z4">            
+    <mat-sidenav *ngIf="user.users" #sidenav mode="over" [(opened)]="shouldRun" (close)="close()" class="mat-elevation-z4">            
         <nav class="main_sidenav">
             <h3>Admin</h3>   
         <ul>
@@ -8,10 +9,9 @@
         </ul>
         </nav>
         </mat-sidenav>
-      <mat-sidenav-content >
-<div class="mainViewBox">
-                <router-outlet ></router-outlet>
-</div>
+      <mat-sidenav-content class="mainBg">
+           <router-outlet ></router-outlet>
+
     </mat-sidenav-content>
 </mat-sidenav-container>
      
