--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,31 @@
-﻿
-            <div class="col-md-6 col-md-offset-3">
-                    <h1>Home</h1>
-                    <p>You're logged in with JWT!!</p>
-                    <div>
-                        Users from secure api end point:
-                        <ul>
-                            <li *ngFor="let user of userService.users">{{user.firstName}} {{user.lastName}}</li>
-                        </ul>
-                    </div>
-                    <p><a [routerLink]="['/login']">Logout</a></p>
-                </div>
-                
-     
+﻿<div class="container">
+        <!--Row with two equal columns-->
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="demo-content pink"><h3>Communication</h3> Communication</div>
+            </div>
+            <div class="col-sm-6">
+                <div class="demo-content bg-alt green"><h3>Admin</h3>Admin</div>
+            </div>
+        </div>
+        <hr>
+        <!--Row with two columns divided in 1:2 ratio-->
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="demo-content blue"><h3>Configuration</h3>Configuration</div>
+            </div>
+            <div class="col-sm-8">
+                <div class="demo-content bg-alt red"><h3>Share</h3>Share</div>
+            </div>
+        </div>
+        <hr>
+        <!--Row with two columns divided in 1:3 ratio-->
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="demo-content orange"><h3>Others</h3>Others</div>
+            </div>
+            <div class="col-sm-9">
+                <div class="demo-content bg-alt purple"><h3>Tutorials</h3>Tutorials</div>
+            </div>
+        </div>
+    </div>
