--- a/src/app/top-menu/top-menu.component.css
+++ b/src/app/top-menu/top-menu.component.css
@@ -6,10 +6,11 @@
     /* This fills the remaining space, by using flexbox. 
      Every toolbar row uses a flexbox row layout. */
       flex: 1 1 auto;
-      text-align:right 
+      text-align:right;
+    font-size:.9em     
     }
 
-.topMenuLogo{width: 100px}
+.topMenuLogo{width: 50px;margin:2%}
 
 .mat-select{max-width: 120px}
 :host >>> .mat-select-placeholder, 
